--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-  <div class="form-container">
-    <h2>Login</h2>
-    <form action="/login.html" method="POST">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required placeholder="Enter your email">
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required placeholder="Enter your password">
+    <div class="form-container">
 
-      <button type="submit">Log In</button>
-    </form>
+        <h2>Login</h2>
 
-    <p>Don't have an account? <a href='/signup'>Sign Up</a></p>
-  </div>
+        <form action="/login.html" method="POST">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required placeholder="Enter your password">
+
+            <button type="submit">Log In</button>
+
+        </form>
+
+        <p>Don't have an account? <a href='signup.html'>Sign Up</a></p>
+
+    </div>
 </body>
+
 </html>
